--- a/Bab/bab5.tex
+++ b/Bab/bab5.tex
@@ -191,8 +191,9 @@ Berdasarkan eksperimen yang dilakukan, didapatkan hasil sebagai berikut:
 		\item Tingkat \textit{overlap} dan \textit{out of bound}: 25\%
 	\end{itemize}
 \end{enumerate}
-	
-Berdasarkan hasil tersebut, didapatkan bahwa semakin besar ukuran terbesar cell, maka tingkat \textit{overlap} dan \textit{out of bound} akan semakin besar.
+
+Berdasarkan hasil tersebut, didapatkan bahwa pemodelan menggunakan cell yang berukuran lebih kecil akan menghasilkan efektivitas yang lebih baik, yakni tingkat \textit{overlap} dan \textit{out of bound} yang lebih kecil.
+%Berdasarkan hasil tersebut, didapatkan bahwa semakin besar ukuran terbesar cell, maka tingkat \textit{overlap} dan \textit{out of bound} akan semakin besar.
 %Hal ini disebabkan karena semakin kecil ukuran cell, maka akurasi ketercakup cell semakin besar, sehingga tingkat \textit{overlap} dan \textit{out of bound} semakin besar.
 
 \subsection{Eksperimen Rasio Sisi Terpendek Ruangan dengan Jarak Pandang Kamera CCTV}
@@ -325,7 +326,7 @@ Berdasarkan eksperimen yang dilakukan, didapatkan hasil sebagai berikut:
 		\item Tingkat \textit{overlap} dan \textit{out of bound}: 8.33\%
 	\end{itemize}
 \end{enumerate}
-Berdasarkan hasil tersebut, tidak didapatkan perubahan korelasi besar sudut pandang kamera CCTV terhadap tingkat \textit{overlap} dan \textit{out of bound}.
+Berdasarkan hasil tersebut, tidak ditemukan adanya korelasi besar sudut pandang kamera CCTV terhadap tingkat \textit{overlap} dan \textit{out of bound}.
 
 
 
