--- a/Bab/bab6.tex
+++ b/Bab/bab6.tex
@@ -12,5 +12,6 @@ Dengan demikian, setiap tujuan dalam skripsi ini telah tercapai.
 \section{Saran}
 Berikut ini adalah saran-saran dari penulis bagi pembaca/peneliti yang ingin melanjutkan penelitian ini:
 \begin{enumerate}
+	\item Lanjutan pemodelan masalah dalam bidang 3 dimensi.
 	\item Penerapan algoritma \textit{Heuristic} pada metode linear programming agar masalah linear programming dapat diselesaikan dengan lebih cepat.
 \end{enumerate}
