--- a/data.tex
+++ b/data.tex
@@ -75,7 +75,7 @@
 %=============================================================================
 %\mode{bimbingan} 		% untuk keperluan bimbingan
 %\mode{sidang} 			% untuk sidang 1
-%\mode{sidangakhir} 	% untuk sidang 2 / sidang pada Skripsi 2(IF)
+\mode{sidangakhir} 	% untuk sidang 2 / sidang pada Skripsi 2(IF)
 %\mode{final} 			% untuk mencetak buku skripsi 
 %=============================================================================
 
@@ -214,7 +214,7 @@
 % - gunakan \texorpdfstring{\\}{} untuk pindah ke baris baru
 % - judul TIDAK ditulis dengan menggunakan huruf besar seluruhnya !!
 %=============================================================================
-\judulINA{Penghitung Jumlah Kamera Statis Minimum Dalam Suatu Ruangan Menggunakan Linear Programming}
+\judulINA{Pencari Jumlah Kamera Statis Minimum Dalam Suatu Ruangan Menggunakan Linear Programming}
 \judulENG{Finding Minimum Static Camera In A Room Using Linear Programming}
 %_____________________________________________________________________________
 %=============================================================================
@@ -228,10 +228,22 @@
 % - langsung mulai setelah '{' awal, jangan mulai menulis di baris bawahnya
 %=============================================================================
 \abstrakINA{
-Kamera CCTV merupakan kamera yang digunakan untuk memantau suatu lokasi dengan tujuan pengawasan dan keamanan. Kamera CCTV pada umumnya dipasang di tempat-tempat strategis sehingga mendapatkan jangkauan yang baik. Penempatan kamera CCTV di ruangan yang berbentuk sederhana (persegi panjang) tidaklah sulit. Kamera CCTV yang dibutuhkan pada umumnya berjumlah dua buah saja dan dipasang di kedua sudut ruangan sehingga saling berhadapan. Namun, jika ruangan berukuran besar, maka tujuan penggunaan kamera CCTV bukan hanya untuk mendeteksi adanya orang, melainkan juga untuk mengenali orang tersebut. Hal ini tentu menyebabkan kesulitan dalam menentukan jumlah minimum dan lokasi penempatan kamera CCTV agar seluruh ruangan terjangkau. Pada skripsi ini, akan dibuat sebuah perangkat lunak yang dapat menghasilkan penempatan-penempatan kamera CCTV yang paling minimum untuk menjangkau seluruh ruangan dengan menggunakan metode linear programming.
+Kamera CCTV merupakan kamera yang digunakan untuk memantau suatu lokasi dengan tujuan pengawasan dan keamanan. Kamera CCTV pada umumnya dipasang di tempat-tempat strategis sehingga mendapatkan jangkauan yang baik. Penempatan kamera CCTV di ruangan yang berbentuk sederhana (persegi panjang) relatif tidak sulit. Kamera CCTV yang dibutuhkan pada umumnya berjumlah dua buah saja dan dipasang di kedua sudut ruangan sehingga saling berhadapan. Namun, jika ruangan berukuran besar, maka tujuan penggunaan kamera CCTV bukan hanya untuk mendeteksi adanya orang, melainkan juga untuk mengenali orang tersebut. Hal ini tentu menyebabkan kesulitan dalam menentukan jumlah minimum dan lokasi penempatan kamera CCTV agar seluruh ruangan dapat tercakup oleh kamera CCTV.
+
+Masalah ini termasuk dalam masalah optimasi di mana terdapat tujuan yang ingin dicapai, yaitu mendapatkan penempatan-penempatan kamera CCTV berjumlah paling minimum yang dapat mencakup seluruh ruangan. Salah satu metode yang dapat digunakan untuk menyelesaikan masalah ini adalah metode linear programming. Metode ini dipilih karena dapat menyelesaikan masalah yang berhubungan dengan optimasi. Dengan memodelkan masalah ini ke dalam bentuk masalah linear programming, maka solusi berupa penempatan-penempatan kamera CCTV yang berjumlah minimum dapat ditemukan.
+
+Dalam pembahasan masalah ini, ruangan dibatasi sehingga dimodelkan dalam bidang 2 dimensi berbentuk persegi panjang. Selain itu, jenis kamera CCTV yang digunakan juga dibatasi sehingga hanya menggunakan 1 jenis kamera CCTV saja. Kamera CCTV memiliki spesifikasi yang relatif beragam. Spesifikasi kamera CCTV yang digunakan dalam masalah ini hanya spesifikasi jarak pandang efektif dan besar sudut pandang kamera CCTV. Spesifikasi jarak pandang efektif yang dimaksud adalah jarak pandang terjauh kamera CCTV untuk mengenali wajah seseorang. Dengan demikian, masukan masalah terdiri dari ukuran ruangan dan spesifikasi kamera CCTV.
+
+Sebelum menyelesaikan masalah ini, masalah akan dimodelkan terlebih dahulu. Pemodelan masalah dilakukan dengan memodelkan setiap elemen masalah, seperti ruangan, kamera CCTV, daerah cakupan kamera CCTV, dsb. Setelah pemodelan ini dilakukan, maka metode penyelesaian masalah menggunakan metode linear programming akan diterapkan sehingga masalah dapat diselesaikan. Untuk membantu menyelesaikan masalah ini, akan dibangun sebuah perangkat lunak yang dapat menerima masalah ini dan menyelesaikan menggunakan metode linear programming. Solusi masalah berupa penempatan-penempatan kamera CCTV minimum akan divisualisasikan dalam bentuk grafis sehingga pengguna perangkat lunak dapat memahaminya dengan lebih mudah. Dengan demikian, masalah yang dibahas dalam skripsi ini dapat dimodelkan dan diselesaikan sehingga didapatkan solusi yang diinginkan.
 }
 \abstrakENG{
-CCTV cameras are cameras used to monitor a location with the purpose of surveillance and security. CCTV cameras are generally installed in strategic places to get a good coverage. Placement of CCTV cameras in a simple room (rectangle) is not difficult. CCTV cameras that are needed is two pieces only and installed in both corners of the room so they facing each other. However, if the room is large, then the purpose of using CCTV cameras is not only to detect people, but also to recognize them. This certainly causes difficulties in determining the minimum number and location of CCTV camera placement to make the whole room covered. In this thesis, a software will be created that can produce the most minimal CCTV camera placement to reach the whole room using linear programming method.
+CCTV cameras are cameras used to monitor a location with the purpose of surveillance and security. CCTV cameras are generally installed in strategic places to get a good coverage. The placement of CCTV cameras in a simple room (rectangle) is relatively not difficult. CCTV cameras that are needed usually are two pieces only and installed in both corners of the room so they are facing each other. However, if the room is large, then the purpose of using CCTV cameras is not only to detect people, but also to recognize the person. This certainly causes difficulty in determining the minimum number and location of CCTV camera placement so that the entire room can be covered by CCTV cameras.
+
+This problem is an optimization problem where there is a goal to be achieved, which is to get the minimum placements of the CCTV camera that can cover the entire room. One method that can be used to solve this problem is the linear programming method. This method is chosen because it can solve the problem related to optimization. By modeling this problem into the form of linear programming problems, then a solution of minimum CCTV camera placements can be found.
+
+In the discussion of this problem, the room is limited so that it is modeled in a rectangular 2-dimensional plane. In addition, the type of CCTV camera used is also limited so there is only 1 type of CCTV camera. CCTV cameras have relatively diverse specifications. The specifications of CCTV cameras that used in this problem are the effective visibility and the view wide angle of CCTV cameras. The specified effective visibility specification is the furthest distance of a CCTV camera to recognize a person's face. Thus, the problem inputs consist of room size and CCTV camera specifications.
+
+Before solving this problem, the problem will be modeled first. Problem modeling is done by modeling every element of the problem, such as room, CCTV camera, CCTV camera coverage area, etc. After this modeling is done, then the problem solving method using linear programming method will be applied so that the problem can be solved. To help solve this problem, a software will be built that can accept this problem and solve using linear programming method. The problem solution in the form of minimum CCTV camera placements will be visualized in graphical form so that software users can understand it more easily. Thus, the problems discussed in this thesis can be modeled and resolved to obtain the desired solution.
 } 
 %=============================================================================
 
