--- a/Bab/bab1.tex
+++ b/Bab/bab1.tex
@@ -5,14 +5,14 @@
 \section{Latar Belakang}
 \label{sec:label}
 
-Kamera merupakan alat/komponen optik yang digunakan untuk mengambil citra/gambar. Salah satu penggunaan kamera dalam kehidupan sehari-hari adalah kamera CCTV (\textit{closed-circuit television}). Kamera CCTV digunakan untuk memantau suatu lokasi dengan tujuan pengawasan dan keamanan. Kamera CCTV pada umumnya dipasang pada tempat strategis sehingga memiliki tingkat jangkauan yang baik. Kamera CCTV bekerja dengan cara merekam lokasi dalam jangkauannya secara terus menerus dan menyimpan hasil rekamannya dalam media penyimpanan. Rekaman ini biasanya digunakan oleh petugas keamanan untuk memantau lokasi tersebut dari tempat yang berbeda sehingga petugas tidak perlu memantau lokasi tersebut dengan datang secara langsung. Petugas hanya perlu mendatangi lokasi tersebut apabila mendapati hal-hal yang mencurigakan berdasarkan hasil rekaman CCTV.
+Kamera merupakan alat/komponen optik yang digunakan untuk mengambil citra/gambar. Salah satu penggunaan kamera dalam kehidupan sehari-hari adalah kamera CCTV (\textit{closed-circuit television}). Kamera CCTV digunakan untuk memantau suatu lokasi dengan tujuan pengawasan dan keamanan. Kamera CCTV pada umumnya dipasang pada tempat strategis sehingga memiliki tingkat jangkauan yang baik. Kamera CCTV bekerja dengan cara merekam lokasi dalam jangkauannya secara terus menerus dan menyimpan hasil rekamannya dalam media penyimpanan. Rekaman ini biasanya digunakan oleh petugas keamanan untuk memantau lokasi tersebut dari tempat yang berbeda sehingga petugas tidak perlu mendatangi lokasi tersebut. Petugas hanya perlu datang apabila melihat hal-hal yang mencurigakan dari hasil rekaman CCTV.
 
-Penempatan kamera CCTV di ruangan yang berbentuk sederhana (persegi panjang) tidaklah sulit. Kamera CCTV yang dibutuhkan biasanya berjumlah dua buah dan dipasang di kedua sudut ruangan yang merupakan satu diagonal. Namun, jika ruangan berukuran besar, maka tujuan penggunaan kamera CCTV pun tidak hanya untuk mendeteksi adanya orang, tetapi juga mengenali orang tersebut. Hal ini tentunya menyebabkan kesulitan dalam menentukan jumlah minimum dan lokasi penempatan kamera CCTV. Terdapat beberapa pendekatan yang dapat digunakan untuk menyelesaikan masalah ini, seperti dengan cara memasang kamera CCTV pada daerah-daerah yang dapat dimasuki orang. Tetapi pada kasus terburuk, orang bisa saja masuk melewati jalur-jalur yang tidak diduga, seperti tembok, atap, bawah tanah, dsb. Oleh karena itu, alangkah baiknya pemasangan kamera CCTV dilakukan hingga seluruh daerah di ruangan tersebut tercakup sepenuhnya.
+Penempatan kamera CCTV di ruangan yang berbentuk sederhana (persegi panjang) relatif tidak sulit. Kamera CCTV yang dibutuhkan pada umumnya berjumlah dua buah dan dipasang di kedua sudut ruangan yang merupakan satu diagonal sehingga saling berhadapan. Namun, jika ruangan berukuran besar, maka tujuan penggunaan kamera CCTV tidak hanya untuk mendeteksi adanya orang, tetapi juga mengenali orang tersebut. Hal ini menyebabkan kesulitan dalam menentukan jumlah minimum dan lokasi penempatan kamera CCTV. Terdapat beberapa pendekatan yang dapat digunakan untuk menyelesaikan masalah ini, seperti dengan cara memasang kamera CCTV pada daerah-daerah yang dapat dimasuki orang. Tetapi pada kasus terburuk, orang bisa saja masuk melewati jalur-jalur yang tidak diduga, seperti tembok, atap, bawah tanah, dsb. Oleh karena itu, alangkah baiknya pemasangan kamera CCTV dilakukan hingga seluruh daerah pada ruangan tersebut dapat tercakup.
 
-Penempatan kamera CCTV dapat dilakukan dalam berbagai lokasi dan berbagai arah pandang. Apabila penempatan kamera CCTV dilakukan tanpa adanya perhitungan, maka terdapat kemungkinan jumlah kamera yang terlalu banyak dan/atau seluruh lokasi yang tidak tercakup sepenuhnya. Pada penempatan kamera CCTV terdapat perhitungan tingkat \textit{overlap} (penumpukan jangkauan) dan tingkat \textit{out of bound} (jarak pandang terpotong). Overlap merupakan bagian ruangam yang dicakup oleh lebih dari 1 kamera CCTV. \textit{Out of bound} merupakan cakupan kamera CCTV yang jatuh di luar ruangan.
+Penempatan kamera CCTV dapat dilakukan di berbagai lokasi dalam berbagai arah pandang. Apabila penempatan kamera CCTV dilakukan tanpa adanya perhitungan, maka terdapat kemungkinan di mana jumlah kamera akan terlalu banyak dan/atau. Dalam penempatan kamera CCTV terdapat perhitungan tingkat \textit{overlap} dan tingkat \textit{out of bound}. \textit{Overlap} merupakan bagian ruangam yang dicakup oleh lebih dari 1 kamera CCTV. Sedangkan, \textit{out of bound} adalah cakupan kamera CCTV yang terhalang oleh sisi ruangan.
 %Penempatan kamera CCTV akan semakin baik apabila memiliki tingkat \textit{overlap} dan tingkat \textit{out of bound} yang semakin rendah.
 
-Pada skripsi ini, akan dibuat sebuah perangkat lunak yang akan menghasilkan jumlah minimum beserta dengan penempatan-penempatan kamera CCTV berdasarkan ukuran ruangan, jarak pandang efektif kamera CCTV, dan sudut pandang kamera CCTV. Penempatan kamera CCTV akan terdiri dari lokasi penempatan dan juga sudut arah pandangnya. Perangkat lunak juga akan memberikan visualisasi yang berguna untuk membantu pengguna memahami penempatan setiap kamera CCTV. Hasil dari perangkat lunak ini dipastikan menjadi hasil yang paling optimal yang berarti bahwa kamera CCTV berjumlah paling minimum yang dapat mencakup seluruh 	ruangan.
+Pada skripsi ini, akan dibuat sebuah perangkat lunak yang akan mencari penempatan-penempatan kamera CCTV yang berjumlah minimum berdasarkan ukuran ruangan, jarak pandang efektif kamera CCTV, dan sudut pandang kamera CCTV. Penempatan kamera CCTV terdiri dari lokasi penempatan dan sudut arah pandang yang dituju. Selain itu, perangkat lunak juga akan menghasilkan visualisasi dari solusi yang didapatkan. Dengan adanya visualisasi, penempatan-penempatan kamera CCTV dapat dipahami dengan lebih baik.
 
 \section{Rumusan Masalah}
 \label{sec:rumusan}
@@ -20,8 +20,8 @@ Pada skripsi ini, akan dibuat sebuah perangkat lunak yang akan menghasilkan juml
 Berdasarkan latar belakang masalah, maka ditetapkan rumusan masalah sebagai berikut:
 
 \begin{itemize}
-	\item Bagaimana cara menentukan jumlah minimum kamera CCTV dalam suatu ruangan?
-	\item Bagaimana cara memvisualisasikan penempatan kamera-kamera CCTV dalam suatu ruangan?
+	\item Bagaimana cara mencari jumlah minimum penempatan kamera CCTV dalam suatu ruangan yang dapat mencakup seluruh ruangan?
+	\item Bagaimana cara memvisualisasikan penempatan-penempatan kamera CCTV dalam suatu ruangan?
 \end{itemize}
 
 \section{Tujuan}
@@ -30,18 +30,18 @@ Berdasarkan latar belakang masalah, maka ditetapkan rumusan masalah sebagai beri
 Berdasarkan rumusan masalah, maka tujuan dalam skripsi ini adalah:
 
 \begin{itemize}
-	\item Mempelajari cara menentukan jumlah minimum kamera CCTV dalam suatu ruangan.
-	\item Membangun perangkat lunak yang dapat mencari jumlah minimum kamera CCTV dan memvisualisasikan penempatan kamera-kamera CCTV dalam suatu ruangan.
+	\item Mempelajari cara menentukan jumlah minimum penempatan kamera CCTV dalam suatu ruangan yang dapat mencakup seluruh ruangan.
+	\item Membangun perangkat lunak yang dapat mencari jumlah minimum penempatan kamera CCTV dan memvisualisasikan penempatan-penempatan kamera CCTV dalam suatu ruangan.
 \end{itemize}
 
 \section{Batasan Masalah}
 \label{sec:batasan}
 
-Masalah yang dibahas dalam skripsi ini memiliki batasan-batasan sebagai berikut:
+Dalam pembahasan masalah ini, terdapat batasan-batasan masalah sebagai berikut:
 
 \begin{itemize}
 	\item Ruangan dimodelkan dalam bidang 2 dimensi berbentuk persegi panjang.
-	\item Spesifikasi kamera CCTV terdiri dari jarak pandang efektif dan besar sudut pandang.
+	\item Spesifikasi kamera CCTV yang digunakan terdiri dari jarak pandang efektif dan besar sudut pandang.
 \end{itemize}
 
 \section{Metodologi}
