Updated: fix typo

--- a/data.tex
+++ b/data.tex
@@ -215,7 +215,7 @@
 % - judul TIDAK ditulis dengan menggunakan huruf besar seluruhnya !!
 %=============================================================================
 \judulINA{Pencarian Jumlah Kamera Statis Minimum dalam Suatu Ruangan Menggunakan Linear Programming}
-\judulENG{Minimum Static Camera Finder Solution Using Linear Programming}
+\judulENG{Finding Minimum Static Camera In A Room Using Linear Programming}
 %_____________________________________________________________________________
 %=============================================================================
 % 								BAGIAN X
