--- a/Bab/bab2.tex
+++ b/Bab/bab2.tex
@@ -12,6 +12,7 @@ Masalah linear programming memiliki karakteristik sebagai berikut:
 \begin{itemize}
 	\item \textbf{Variabel keputusan}\\
 		Dalam masalah linear programming, terdapat variabel keputusan yang mendeskripsikan keputusan yang akan diambil. Contoh:
+		
 		\begin{equation*}
 			\begin{split}
 				x_1 &= \text{jumlah produk A yang diproduksi} \\
@@ -28,8 +29,7 @@ Masalah linear programming memiliki karakteristik sebagai berikut:
 
 	\item \textbf{Batasan}\\
 		Dalam masalah linear programming, terdapat batasan-batasan yang membuat variabel keputusan memiliki nilai yang dibatasi. Batasan juga membuat suatu variabel keputusan berkaitan dengan variabel keputusan lainnya. Contoh:
-		%Fungsi tujuan ditentukan oleh variabel-variabel keputusan. Dalam fungsi tujuan yang memaksimalkan hasil, nilai dari setiap variabel keputusan dapat ditentukan sedemikian mungkin sehingga menghasilkan hasil sebesar-besarnya. Tentunya hal ini tidak mungkin terjadi karena terdapat faktor-faktor yang mencegah variabel keputusan untuk ditentukan sedemikian mungkin. Faktor-faktor ini berperan sebagai batasan bagi variabel keputusan sehingga nilai variabel keputusan tidak melebihi batas. Dengan adanya batasan ini, nilai dari fungsi tujuan tidak akan bernilai tak hingga karena variabel-variabel keputusannya dibatasi.
-
+		
 		\begin{equation*}		
 			\setlength\arraycolsep{1.5pt}
 			\begin{array}{r c r c r}
@@ -41,6 +41,7 @@ Masalah linear programming memiliki karakteristik sebagai berikut:
 		
 	\item \textbf{Batasan non-negatif}\\
 		Dalam masalah linear programming, batasan non-negatif (\(x_i\geq 0\)) pada variabel keputusan menyatakan bahwa variabel keputusan tersebut tidak dapat bernilai negatif. Dengan batasan non-negatif, variabel keputusan diharuskan untuk bernilai 0 atau positif. Contoh:
+		
 		\begin{equation*}
 			\begin{split}
     			x_1 &\geq 0 \\
@@ -51,6 +52,7 @@ Masalah linear programming memiliki karakteristik sebagai berikut:
 \end{itemize}
 
 Dengan keempat karakteristik di atas, setiap masalah optimasi dapat diubah ke dalam masalah linear programming untuk diselesaikan. Berikut contoh masalah linear programming:
+
 \begin{equation*}
 	\setlength\arraycolsep{1.5pt}
 	\begin{array}{r r c r c l}
@@ -93,7 +95,7 @@ Pada contoh masalah tersebut, hanya terdapat 2 variabel keputusan sehingga dapat
 		\draw (40,100) -- node[above,sloped] {\tiny$x_1\leq40$} (40,0);
 		\fill[blue!50!cyan,opacity=0.3] (0,0) -- (0,80) -- (20,60) -- (40,20) -- (40,0) -- cycle;
 	\end{tikzpicture}
-	\caption[Masalah linear programming tanpa daerah \textit{feasible}]{Masalah linear programming tanpa daerah \textit{feasible}}
+	\caption[Contoh masalah linear programming dengan daerah \textit{feasible}]{Contoh masalah linear programming dengan daerah \textit{feasible}}
 	\label{fig:daerah_feasible}
 \end{figure}
 
@@ -122,7 +124,7 @@ Agar suatu masalah linear programming memiliki solusi optimal, maka daerah \text
 		\draw (40,20) node[left] {$D$};
 		\draw (40,0) node[above left] {$E$};
 	\end{tikzpicture}
-	\caption[\textit{Corner points} pada daerah \textit{feasible}]{Corner points pada daerah \textit{feasible}}
+	\caption[\textit{Corner points} pada daerah \textit{feasible}]{\textit{Corner points} pada daerah \textit{feasible}}
 	\label{fig:corner_points}
 \end{figure}
 
@@ -139,7 +141,7 @@ Tidak semua masalah linear programming memiliki daerah \textit{feasible}. Apabil
 		\draw (3,0) -- node[above,sloped] {\small $x_1 + x_2 \leq 3$} (0,3);
 		\draw (5,0) -- node[above,sloped] {\small $x_1 + x_2 \geq 5$} (0,5);
 	\end{tikzpicture}
-	\caption[Tidak ada daerah \textit{feasible}]{Tidak ada daerah \textit{feasible}}
+	\caption[Contoh masalah linear programming tanpa daerah \textit{feasible}]{Contoh masalah linear programming tanpa daerah \textit{feasible}}
 	\label{fig:daerah_infeasible}
 \end{figure}
 	
@@ -333,16 +335,21 @@ Metode simplex merupakan metode yang digunakan untuk menyelesaikan masalah linea
 \end{enumerate}
 
 Fungsi objektif yang berbentuk
+
 \begin{equation*}
 	z = c_1x_1 + c_2x_2 + \dots + c_nx_n
 \end{equation*}
+
 ditulis dalam bentuk
+
 \begin{equation*}
 	z - c_1x_1 - c_2x_2 - \dots - c_nx_n = 0
 \end{equation*}
+
 Bentuk fungsi objektif ini disebut sebagai baris 0.
 
 Untuk memahami penyelesaian masalah linear programming menggunakan metode simplex, akan digunakan sebuah contoh masalah linear programming sebagai berikut:
+
 \begin{equation*}
 	\setlength\arraycolsep{1.5pt}
 	\begin{array}{r r c r c r c l}
@@ -418,45 +425,58 @@ Dalam contoh masalah, \textit{bfs} pada saat ini masih belum optimal, sehingga p
 	$
 \end{center}
 
-Setelah menentukan \textit{entering variable} dan \textit{leaving variable}, akan dilakukan OBE. OBE dilakukan untuk membuat \textit{entering variable} menjadi variabel basis, sehingga \textit{entering variable} pada baris {leaving variable} bernilai 1 dan variabel lain pada kolom \textit{entering variable} bernilai 0. Setelah OBE dilakukan, baris \textit{leaving variable} akan memiliki \textit{entering variable} sebagai variabel basis.
+Setelah menentukan \textit{entering variable} dan \textit{leaving variable}, akan dilakukan Operasi Baris Elementer(OBE). OBE dilakukan untuk membuat \textit{entering variable} menjadi variabel basis, sehingga \textit{entering variable} pada baris {leaving variable} bernilai 1 dan variabel lain pada kolom \textit{entering variable} bernilai 0. Setelah OBE dilakukan, baris \textit{leaving variable} akan memiliki \textit{entering variable} sebagai variabel basis.
 
 Dalam contoh masalah, telah ditentukan \textit{entering variable} dan \textit{leaving variable}. Variabel yang menjadi \textit{entering variable} adalah variabel \(x_1\) yang berada pada kolom \(x_1\). Variabel yang menjadi \textit{Leaving variable} adalah variabel \(s_3\) yang berada pada baris 3. Dengan OBE, \textit{entering variable} pada baris 3 akan dibuat bernilai 1 dan variabel lain pada kolom \textit{entering variable} akan dibuat bernilai 0. Berikut ini urutan OBE yang dilakukan:
 \begin{enumerate}
 	\item Untuk mendapatkan variabel \(x_1\) bernilai 1 pada baris 3, maka baris 3' baru dapat dibentuk dari baris 3 lama yang dikalikan dengan \(\nicefrac{1}{2}\).\\
+
 	\begin{equation*}
 		\frac{1}{2}R_3 \rightarrow R_3'
 	\end{equation*}
+
 	sehingga baris 3' baru menjadi
+
 	\begin{equation*}
 		x_1 + 0.75x_2 + 0.25x_3 + 0.5s_3 = 4
 	\end{equation*}
 	
 	\item Untuk mendapatkan variabel \(x_1\) bernilai 0 pada baris 0, maka baris 0' baru dapat dibentuk dari baris 3' baru yang dikalikan 60 dan ditambahkan dengan baris 0 lama.\\
+
 	\begin{equation*}
 		60R_3 + R_0 \rightarrow R_0'
 	\end{equation*}
+
 	sehingga baris 0' baru menjadi
+
 	\begin{equation*}
 		z + 15x_2 - 5x_3 + 30s_3 = 240
 	\end{equation*}
 
 	\item Untuk mendapatkan variabel \(x_1\) bernilai 0 pada baris 1, maka baris 1' baru dapat dibentuk dari baris 3' baru yang dikalikan -8 dan ditambahkan dengan baris 1 lama.\\
+
 	\begin{equation*}
 		-8R_3 + R_1 \rightarrow R_1'
 	\end{equation*}
+
 	sehingga baris 1' baru menjadi
+
 	\begin{equation*}
 		-x_3 + s_1 - 4s_3 = 16
 	\end{equation*}
 
 	\item Untuk mendapatkan variabel \(x_1\) bernilai 0 pada baris 2, maka baris 2' baru dapat dibentuk dari baris 3' baru yang dikalikan -4 dan ditambahkan dengan baris 2 lama.\\
+
 	\begin{equation*}
 		-4R_2 + R_2 \rightarrow R_2'
 	\end{equation*}
+
 	sehingga baris 2' baru menjadi
+
 	\begin{equation*}
 		-x_2 + 0.5x_3 + s_2 - 2s_3 = 4
 	\end{equation*}
+
 \end{enumerate}
 
 Karena nilai \(x_1\) bernilai 0 pada baris 4, maka tidak perlu dilakukan OBE pada baris 4, sehingga baris 4' baru sama dengan baris 4 lama. \textit{Entering variable} menggantikan \textit{leaving variable} pada baris 3 sehingga \(x_1\) menjadi variabel basis yang baru. Setelah melakukan OBE, maka didapatkan tabel simplex baru seperti pada tabel~\ref{tab:tabel_simplex_1} yang menunjukkan \textit{bfs} dengan nilai \(z=240, x_1=4, x_2=0, x_3=0, s_1=16, s_2=4, s_3=0, \text{ dan } s_4=5\).
@@ -502,37 +522,49 @@ Setelah mendapatkan tabel simplex~\ref{tab:tabel_simplex_1}, langkah selanjutnya
 Selanjutnya dilakukan OBE untuk membuat \textit{entering variable} \(x_3\) menjadi variabel basis. Berikut ini urutan OBE yang dilakukan:
 \begin{enumerate}
 	\item Untuk mendapatkan variabel \(x_3\) bernilai 1 pada baris 2, maka baris 2'' baru dapat dibentuk dari baris 2' lama yang dikalikan dengan 2.\\
+
 	\begin{equation*}
 		2R_2' \rightarrow R_2''
 	\end{equation*}
+
 	sehingga baris 2'' baru menjadi
+
 	\begin{equation*}
 		-2x_2 + x_3 + 2s_2 - 4s_3 = 8
 	\end{equation*}
 	
 	\item Untuk mendapatkan variabel \(x_3\) bernilai 0 pada baris 0, maka baris 0'' baru dapat dibentuk dari baris 2'' baru yang dikalikan 5 dan ditambahkan dengan baris 0' lama.\\
+
 	\begin{equation*}
 		5R_2'' + R_0' \rightarrow R_0''
 	\end{equation*}
+
 	sehingga baris 0'' baru menjadi
+
 	\begin{equation*}
 		z + 5x_2 + 10s_2 + 10s_3 = 280
 	\end{equation*}
 	
 	\item Untuk mendapatkan variabel \(x_3\) bernilai 0 pada baris 1, maka baris 1'' baru dapat dibentuk dari baris 2'' baru yang ditambahkan dengan baris 1' lama.\\
+
 	\begin{equation*}
 		R_2'' + R_1' \rightarrow R_1''
 	\end{equation*}
+
 	sehingga baris 1'' baru menjadi
+
 	\begin{equation*}
 		-2x_2 + s_1 + 2s_2 - 8s_3 = 24
 	\end{equation*}
 	
 	\item Untuk mendapatkan variabel \(x_3\) bernilai 0 pada baris 3, maka baris 3'' baru dapat dibentuk dari baris 2'' baru yang dikalikan \(-\nicefrac{1}{4}\) dan ditambahkan dengan baris 3' lama.\\
+
 	\begin{equation*}
 		-\frac{1}{4}R_2'' + R_3' \rightarrow R_3''
 	\end{equation*}
+
 	sehingga baris 3'' baru menjadi
+
 	\begin{equation*}
 		x_1 + 1.25x_2 - 0.5s_2 + 1.5s_3 = 2
 	\end{equation*}
@@ -561,6 +593,7 @@ Variabel \(x_3\) sudah bernilai 0 pada baris 4, maka baris 4 yang baru sama deng
 Langkah selanjutnya adalah memeriksa apakah \textit{bfs} saat ini sudah optimal. Pada baris 0, tidak ditemukan variabel bernilai negatif, sehingga \textit{bfs} pada tahap ini sudah optimal. Dengan demikian masalah ini memiliki solusi optimal bernilai 280 dengan variabel \(x_1=2, x_2=0, x_3=8, \text{ dan } x_4 = 0\).
 
 Contoh yang dibahas sebelumnya merupakan contoh masalah linear programming dalam kasus maksimisasi. Untuk menyelesaikan masalah linear programming pada kasus minimasi, dapat dilakukan dengan mengubah tujuan minimasi menjadi tujuan maksimasi. Perubahan tujuan ini dilakukan dengan mengalikan fungsi tujuan dengan -1. Contoh:
+
 \begin{equation*}
 	\setlength\arraycolsep{1.5pt}
 	\begin{array}{r r c r c l}
@@ -573,6 +606,7 @@ Contoh yang dibahas sebelumnya merupakan contoh masalah linear programming dalam
 \end{equation*}
 
 Contoh tersebut merupakan contoh masalah linaer programming dengan tujuan minimasi. Untuk menyelesaikannya, fungsi objektif dikalikan dengan -1, sehingga tujuan berubah menjadi maksimasi. Contoh masalah berubah menjadi:
+
 \begin{equation*}
 	\setlength\arraycolsep{1.5pt}
 	\begin{array}{r r c r c l}
